# chensilytics

.claude/: settings.local.json
eve-intel/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  FILE_MANIFEST.txt  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  VALIDATION_REPORT.md  docker-compose.yml  pyproject.toml
eve-intel/.github/workflows/: ci.yml
eve-intel/alembic/: env.py
eve-intel/alembic/versions/: 001_initial_schema.py
eve-intel/artifacts/: sample_arbitrage.json
eve-intel/eve_intel/: __init__.py  __main__.py  cli.py  logging.py  settings.py  worker.py
eve-intel/eve_intel/analytics/: __init__.py  arbitrage.py  fees.py  risk.py
eve-intel/eve_intel/api/: main.py
eve-intel/eve_intel/api/routers/: arbitrage.py
eve-intel/eve_intel/datasources/: __init__.py  cache.py  esi.py
eve-intel/eve_intel/datasources/adapters/: mock.py
eve-intel/eve_intel/db/: base.py  models.py  repositories.py
eve-intel/grafana/dashboards/: arbitrage.json.backup
eve-intel/grafana/provisioning/dashboards/: default.yml
eve-intel/grafana/provisioning/datasources/: postgres.yml
eve-intel/scripts/: seed.py
eve-intel/tests/: conftest.py
eve-intel/tests/unit/: test_arbitrage.py  test_cache.py  test_fees.py  test_repositories.py  test_risk.py
